--- a/css/forms.css
+++ b/css/forms.css
@@ -94,10 +94,9 @@ form {
   color: var(--secondary-color);
 }
 .modal-content ul {
-  padding-left: 40px; /* Aumenta questo valore per spostare i punti più a destra */
-  margin-left: 20px; /* Opzionale: aggiunge ulteriore spazio a sinistra */
+  padding-left: 40px; 
+  margin-left: 20px; 
 }
-
 @media (max-width: 768px) {
   form {
     max-width: 95%;
